--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green2">#57cc99</color>
     <color name="blue1">#5383EC</color>
     <color name="blue2">#4A66AC</color>
+    <color name="white2">#d4d4d4</color>
 </resources>
