--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue1">#5383EC</color>
     <color name="blue2">#4A66AC</color>
     <color name="white2">#d4d4d4</color>
+    <color name="white3">#F7F7F7</color>
 </resources>
