- Completed Cart Screen - Modified padding screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green1">#53B175</color>
     <color name="green2">#57cc99</color>
+    <color name="green3">#489E67</color>
     <color name="blue1">#5383EC</color>
     <color name="blue2">#4A66AC</color>
     <color name="white2">#d4d4d4</color>
